# claco.ansible

./: .ansible-lint  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  ansible.cfg  bootstrap.sh  setup.cfg
images/: BUILD.bazel
inventory/: galago.yml  pinebook.yml
inventory/group_vars/: all.yml
inventory/host_vars/: galago.yml  pinebook.yml
packer/: build.json
packer/ansible/: playbook.yml
packer/debian/: jessie.json  stretch.json
packer/debian/scripts/: update.sh
packer/ubuntu/: bionic.json  cosmic.json  disco.json  xenial.json
playbooks/: building.yml  deployment.yml  linting.yml  raspbian.yml  testing.yml
playbooks/hosts/: flatiron.yml  galago.yml  pinebook.yml
roles/claco.add_disk/: README.md
roles/claco.add_disk/defaults/: main.yml
roles/claco.add_disk/handlers/: main.yml
roles/claco.add_disk/meta/: main.yml
roles/claco.add_disk/tasks/: main.yml  ubuntu.yml
roles/claco.ansible/: README.md
roles/claco.ansible_lint/: README.md
roles/claco.apt/: README.md
roles/claco.apt/meta/: main.yml
roles/claco.artifactory/: README.md
roles/claco.bash/: README.md
roles/claco.docker/: README.md
roles/claco.docker_registry/: README.md
roles/claco.erase_disk/: README.md
roles/claco.format_disk/: README.md
roles/claco.git/: README.md
roles/claco.gitlint/: README.md
roles/claco.go/: README.md
roles/claco.go_cve_dictionary/: README.md
roles/claco.go_exploitdb/: README.md
roles/claco.gost/: README.md
roles/claco.goval_dictionary/: README.md
roles/claco.molecule/: README.md
roles/claco.packer/: README.md
roles/claco.pacman/: README.md
roles/claco.parted/: README.md
roles/claco.partition_disk/: README.md
roles/claco.pip/: README.md
roles/claco.pre_commit/: README.md
roles/claco.pylama/: README.md
roles/claco.python/: README.md
roles/claco.raspbian/: README.md
roles/claco.readline/: README.md
roles/claco.shell/: README.md
roles/claco.skeleton/: README.md.j2
roles/claco.teamcity_build_agent/: README.md
roles/claco.teamcity_server/: README.md
roles/claco.vuls/: README.md
roles/claco.yamllint/: README.md
rules/: DefaultHeaderCommentMatchesRoleNameRule.py  MetaAuthorRequiresEmailRule.py  MetaLicenseAllowedRule.py  MoleculeConvergePlaybookContainRoleNameRule.py  MoleculeDefaultFilesRequiredRule.py  ReadmeAuthorInformationMatchesMetaAuthorRule.py  ReadmeExamplePlaybookContainsRoleNameRule.py  ReadmeLicenseMatchesMetaLicenseRule.py  ReadmeTitleMatchesRoleNameRule.py  TestTaskRolesContainRoleNameRule.py  VariablePrefixMatchesRoleNameRule.py  VariablesInAlphabeticalOrderRule.py
(+470 files in other folders)
